[gd_scene load_steps=3 format=3 uid="uid://bxcd82whlfmsk"]

[ext_resource type="Script" uid="uid://nhqberbk3drv" path="res://fallübersicht.gd" id="1_00qau"]

[sub_resource type="Theme" id="Theme_00qau"]

[node name="Fallübersicht" type="Node2D"]
script = ExtResource("1_00qau")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Open_Caseboard" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 630.0
offset_top = 86.0
offset_right = 793.0
offset_bottom = 117.0
text = "Fallübersicht öffnen"

[node name="Caseboard_UI" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Caseboard_UI"]
offset_left = -260.0
offset_top = -250.0
offset_right = 260.0
offset_bottom = 216.0

[node name="SelectButton" type="Button" parent="Caseboard_UI"]
unique_name_in_owner = true
visible = false
offset_left = -250.0
offset_top = -240.0
offset_right = -125.0
offset_bottom = -208.0
text = "Fall auswählen"

[node name="Back Button" type="Button" parent="Caseboard_UI"]
offset_left = 124.0
offset_top = -240.0
offset_right = 249.0
offset_bottom = -208.0
text = "Schließen"

[node name="ScrollContainer" type="ScrollContainer" parent="Caseboard_UI"]
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
theme = SubResource("Theme_00qau")

[node name="VBoxContainer" type="VBoxContainer" parent="Caseboard_UI/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[connection signal="pressed" from="Open_Caseboard" to="." method="_on_open_caseboard_pressed"]
[connection signal="pressed" from="Caseboard_UI/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="Caseboard_UI/Back Button" to="." method="_on_back_button_pressed"]
